--- a/lib/pleiades/generators/pleiades/setup/templates/command_common.erb
+++ b/lib/pleiades/generators/pleiades/setup/templates/command_common.erb
@@ -1,13 +1,9 @@
 module CommandCommon
   extend ActiveSupport::Concern
+  include Pleiades::Client
 
   included do
-    def client
-      @client ||= Line::Bot::Client.new { |config|
-        config.channel_secret = ENV['LINE_CHANNEL_SECRET']
-        config.channel_token = ENV['LINE_CHANNEL_TOKEN']
-      }
-    end<% if options['user_related_files'] %>
+<% if options['user_related_files'] %>
 
     def current_user
       @user ||= User.find_by_line_id(@event.source.user_id)
