--- a/lib/pleiades/generators/pleiades/setup/templates/command_common.erb
+++ b/lib/pleiades/generators/pleiades/setup/templates/command_common.erb
@@ -1,14 +1,11 @@
 module CommandCommon
   extend ActiveSupport::Concern
   include Pleiades::Client
-
-  included do
 <% if options['user_related_files'] %>
-
+  included do
     def current_user
       @user ||= User.find_by_line_id(@event.source.user_id)
     end
-    alias_method :user, :current_user
-<% end %>
+    alias_method :user, :current_user<% end %>
   end
 end
